[package]
name = "tls-decrypt"
version = "0.1.4"
edition = "2021"
description = "a simple lib to decrypt the tls cipher data"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
ring = "0.17.8"

# 添加 test dependencies
[dev-dependencies]
hex = "0.4.3"